--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.1.3",
     "google-auth-library": "^8.7.0",
     "jwt-decode": "^3.1.2",
+    "netlify-cli": "^12.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-masonry-css": "^1.0.16",
