--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "netlify-cli": "^12.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-masonry-css": "^1.0.16",
     "react-responsive-masonry": "^2.1.6",
     "react-router-dom": "^6.4.2",
